Fix button cut-off on safari

--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ article .bottom {
 }
 .buttons button {
     width: 100%;
+    height:100%;
     padding: 5px 0;
     margin: 5px auto;
     max-width: 200px;
